--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="Game2048_Web.js"></script>
     </head>
     <body>
-        <div id="main">
+        <div id="game">
             <table>
                 <tr>
                     <td></td>
@@ -35,6 +35,12 @@
                     <td></td>
                 </tr>
             </table>
+        </div>
+        <div id="control">
+            <span id="up">up</span>
+            <span id="left">left</span>
+            <span id="down">down</span>
+            <span id="right">right</span>
         </div>
     </body>
 </html>
