--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Game2048_Web</title>
         <meta charset="utf-8">
+        <link rel="icon" href="Game2048.jpg">
         <link rel="stylesheet" href="Game2048_Web.css">
         <script src="jquery_3.3.1.js"></script>
         <script src="Game2048_Web.js"></script>
