--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
         <title>Game2048_Web</title>
         <meta charset="utf-8">
         <link rel="icon" href="Game2048.jpg">
